...
    },
    "ACCOUNT_NEXT" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Next"
          }
        }
      }
    },
    "ACCOUNT_SETUP_DESCRIPTION" : {
      "localizations" : {
...
            "state" : "translated",
            "value" : "Notifications"
          }
        }
      }
    },
    "OK" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
...
    },
    "OPTIONS_PANEL_SURVEY_BUTTON" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Take Daily Survey"
          }
        }
      }
    },
    "OPTIONS_PANEL_TITLE" : {
      "localizations" : {
...
            "state" : "translated",
            "value" : "Withdraw from Study"
          }
        }
      }
    },
    "Yes" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Yes"
...
