...
//                                    self.alertMessage = SurveyRules.alreadyTookSurveyMessage
//                                    self.showingSurveyAlert.toggle()
//                                } else {
//                                    self.showingSurvey.toggle()
//                                }
                            } label: {
                                Text("Take Daily Survey")
                                    .foregroundColor(.white)
                                    .frame(maxWidth: .infinity)
                            }
                            .alert(isPresented: $showingSurveyAlert) {
                                Alert(title: Text("Survey Not Available"),
                                      message: Text(self.alertMessage),
                                      dismissButton: .default(Text("OK")))
                            }
                            .sheet(isPresented: $showingSurvey) {
//                                CKTaskViewController(tasks: DailySurveyTask(showInstructions: false))
//                                    .ignoresSafeArea(.container, edges: .bottom)
//                                    .ignoresSafeArea(.keyboard, edges: .bottom)
                            }
...
